--- a/index.html
+++ b/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- nothing burger -->
-     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <h1 style="color: darkkhaki;">
-        poolclubbitches
+    <img 
+    class="mocklogo"
+    src="Elements/poolclub_mocklogo.png"/>
+    <h1 style="color: rgb(0, 0, 0);">
+        wednesdays @6pm
     </h1>
 
-    <h1 class="small">
-        Poolclubbit2ches
-    </h1>
-
-    <h1>
-        hi it's me
-    </h1>
-
-    <h2>
-        this is h2
+    <h2 class="small">
+        9/24: Lucy's (Ave A b/w 7th + 8th)
     </h2>
 
-    <h3 class="small">
-        <span>this is h3 span 1</span>
-        <span>this is h3 span 2</span>
-    </h3>
-    
-    <h3 class="small"> 
-        <span>this is h3 span 3</span>
-        <span>this is h3 span 4</span>
-    </h3>
 
 </body>
+
 </html>
