--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html>
 
 <head>
-    <!-- nothing burger -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div>
+        <img class="mocklogo" src="Elements/POOLCLUBFINAL.gif" />
 
-    <img 
-    class="mocklogo"
-    src="Elements/poolclub_mocklogo.png"/>
-    <h1 style="color: rgb(0, 0, 0);">
-        wednesdays @6pm
+    </div>
+
+    <h1 style="color: rgb(0, 0, 0);" class="vt h1">
+        wednesday @6pm
     </h1>
 
-    <h2 class="small">
+    <h2 class="vt">
         9/24: Lucy's (Ave A b/w 7th + 8th)
     </h2>
+
+
+    <div class="container vt" style="color: rgb(244, 17, 62);">
+        <div class="container">
+            you are cordially invited to pool club. your wed evening upgrade. for beginners. for
+            new friends. an excuse to explore our dives. location will change up every week, check back.
+        </div>
 
 
 </body>
