--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        body {
+            background-color: rgb(247, 247, 247);
+        }
+    </style>
 </head>
 
 <body>
@@ -27,8 +33,10 @@
     <div class="container vt" style="color: rgb(244, 17, 62);">
         <div class="container">
             you are cordially invited to pool club. your wed evening upgrade. for beginners. for
-            new friends. an excuse to explore our dives. location will change up every week, check back.
+            new friends. an excuse to explore our dives. location will change up every week, check back. 
         </div>
+
+         
 
 
 </body>
