--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             background-color: rgb(247, 247, 247);
         }
     </style>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
