--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container vt" style="color: rgb(244, 17, 62);">
         <div class="container">
             you are cordially invited to pool club. your wed evening upgrade. for beginners. for
-            new friends. an excuse to explore our dives. location will change up every week, check back. 
+            new friends. an excuse to explore our dives. location will change up every week, check back. text me your rsvp -sav
         </div>
 
          
