--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         }
     </style>
 
-        <meta name="viewport" content="width=device-width, initial-scale=0.8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
 
-    
+    <link rel="icon" href="Elements/favicon_poolclub.png" type="image/png">
+
+
 </head>
 
 <body>
@@ -37,10 +39,11 @@
     <div class="container vt" style="color: rgb(244, 17, 62);">
         <div class="container">
             you are cordially invited to pool club. your wed evening upgrade. for beginners. for
-            new friends. an excuse to explore our dives. location will change up every week, check back. text me your rsvp -sav
+            new friends. an excuse to explore our dives. location will change up every week, check back. text me your
+            rsvp -sav
         </div>
 
-         
+
 
 
 </body>
